[package]
name = "Projet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }

[[bin]]
name = "clients"
path = "src/clients.rs"

